# yamu

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml
apps/yamu-auth/: Cargo.toml
apps/yamu-auth/src/: main.rs
apps/yamu-download/: Cargo.toml
apps/yamu-download/src/: atomic_file.rs  main.rs  metadata.rs  state.rs
apps/yamu-edit/: Cargo.toml
apps/yamu-edit/src/: main.rs
apps/yamu-inspect/: Cargo.toml
apps/yamu-inspect/src/: main.rs
apps/ym-auth/: Cargo.toml
apps/ym-auth/src/: main.rs
apps/ym-download/: Cargo.toml
apps/ym-download/src/: main.rs  metadata.rs  state.rs
apps/ym-edit/: Cargo.toml
apps/ym-edit/src/: main.rs
apps/ym-inspect/: Cargo.toml
apps/ym-inspect/src/: main.rs
crates/yandex-music-api/: Cargo.toml  README.md
crates/yandex-music-api/examples/: device_auth.rs
crates/yandex-music-api/src/: error.rs  lib.rs
crates/yandex-music-api/src/auth/: mod.rs
crates/yandex-music-api/src/client/: account.rs  albums.rs  artists.rs  lyrics.rs  mod.rs  request.rs  search.rs
crates/yandex-music-api/src/credentials/: lifecycle.rs  record.rs  store.rs
crates/yandex-music-api/src/models/: album.rs  artist.rs  common.rs  library.rs  mod.rs  track.rs
crates/yandex-music-api/tests/: auth.rs  credentials_store.rs  downloads.rs  lyrics.rs  read_policy.rs
crates/yandex-music-credentials/: Cargo.toml
crates/yandex-music-credentials/src/: credentials.rs  error.rs  lib.rs  lifecycle.rs  store.rs
crates/yandex-music-credentials/tests/: lifecycle.rs  store.rs
examples/: device_auth.rs
src/: atomic_file.rs  downloader.rs  error.rs  lib.rs  resource.rs  temporary_file.rs
src/auth/: mod.rs
src/client/: albums.rs  artists.rs  downloads.rs  library.rs  lyrics.rs  mod.rs  mutations.rs  recommendations.rs  request.rs  tracks.rs
src/credentials/: error.rs  lifecycle.rs  mod.rs  record.rs  store.rs
src/media/: ffmpeg.rs  ffmpeg_cli.rs  mod.rs
src/models/: account.rs  album.rs  artist.rs  auth.rs  common.rs  download.rs  library.rs  lyrics.rs  mod.rs  recommendations.rs  search.rs
tests/: auth.rs  client.rs  credentials_lifecycle.rs  credentials_store.rs  discovery.rs  downloader.rs  downloads.rs  library.rs  lyrics.rs  media_backends.rs  mutations.rs  read_policy.rs  resource_refs.rs
