[workspace]
resolver = "3"
members = [
    "apps/ym-auth",
    "apps/ym-edit",
    "apps/ym-inspect",
    "crates/yandex-music-api",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/ya-music"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
directories = "6"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
zeroize = "1"

yandex-music-api = { path = "crates/yandex-music-api" }
