[package]
name = "yandex-music-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "An unofficial async Rust client for the Yandex Music API"
license.workspace = true
repository.workspace = true
keywords = ["yandex", "music", "api", "async"]
categories = ["api-bindings", "multimedia"]

[workspace]
resolver = "3"
members = [
    "apps/ym-auth",
    "apps/ym-download",
    "apps/ym-edit",
    "apps/ym-inspect",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/ya-music"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive"] }
directories = "6"
hmac = "0.13.0"
lofty = "0.24.0"
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "format"] }
imagesize = { version = "0.15.0", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
thiserror = "2"
tokio = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
zeroize = "1"

yandex-music-api = { path = "." }

[features]
default = ["oauth"]
oauth = ["dep:uuid"]
credentials = ["oauth", "dep:directories", "dep:zeroize", "tokio/rt"]
downloads = ["dep:base64", "dep:hmac", "dep:sha2", "reqwest/stream"]
lyrics = ["dep:base64", "dep:hmac", "dep:sha2"]
media = ["dep:lofty", "tokio/fs", "tokio/rt"]
media-ffmpeg-cli = ["media", "tokio/io-util", "tokio/process"]
media-ffmpeg = ["media", "dep:ffmpeg-next", "dep:imagesize"]

[dependencies]
base64 = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
lofty = { workspace = true, optional = true }
ffmpeg-next = { workspace = true, optional = true }
imagesize = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
url.workspace = true
uuid = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
wiremock.workspace = true
