[package]
name = "yamu"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
description = "An unofficial async Rust client for the Yandex Music API"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license.workspace = true
repository.workspace = true
keywords = ["yandex", "music", "api", "async"]
categories = ["api-bindings", "multimedia"]
readme = "README.md"
documentation = "https://docs.rs/yamu"
exclude = [".cargo", ".github", ".gitignore"]

[workspace]
resolver = "3"
members = [
    "apps/yamu-auth",
    "apps/yamu-download",
    "apps/yamu-edit",
    "apps/yamu-inspect",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/yamu"

[workspace.dependencies]
anyhow = "1"
aes = "0.9.1"
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive"] }
directories = "6"
ctr = "0.10.1"
hmac = "0.13.0"
hex = "0.4.3"
lofty = "0.24.0"
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "filter", "format", "software-resampling"] }
imagesize = { version = "0.15.0", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
thiserror = "2"
tokio = "1"
tempfile = "3.27"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
zeroize = "1"

yamu = { path = "." }

[features]
default = ["oauth"]
oauth = ["dep:uuid"]
credentials = ["oauth", "dep:directories", "dep:tempfile", "dep:zeroize", "tokio/rt"]
downloads = ["dep:base64", "dep:hmac", "dep:sha2", "reqwest/stream"]
downloader = [
    "downloads",
    "media",
    "dep:aes",
    "dep:ctr",
    "dep:hex",
    "dep:tempfile",
    "tokio/io-util",
    "tokio/macros",
]
lyrics = ["dep:base64", "dep:hmac", "dep:sha2"]
media = ["dep:lofty", "tokio/fs", "tokio/rt"]
media-ffmpeg-cli = ["media", "dep:tempfile", "tokio/io-util", "tokio/process"]
media-ffmpeg = ["media", "dep:ffmpeg-next", "dep:imagesize", "dep:tempfile"]

[dependencies]
base64 = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
ctr = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
lofty = { workspace = true, optional = true }
ffmpeg-next = { workspace = true, optional = true }
imagesize = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tempfile = { workspace = true, optional = true }
url.workspace = true
uuid = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread"] }
uuid.workspace = true
wiremock.workspace = true
