[package]
name = "yamu-download"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
yamu = { workspace = true, features = ["credentials", "downloader", "lyrics", "media-ffmpeg-cli"] }
