[package]
name = "ym-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
yandex-music-api.workspace = true
yandex-music-credentials.workspace = true
