[package]
name = "yandex-music-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "An unofficial async Rust client for the Yandex Music API"
license.workspace = true
repository.workspace = true
keywords = ["yandex", "music", "api", "async"]
categories = ["api-bindings", "multimedia"]

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
