[package]
name = "yandex-music-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "An unofficial async Rust client for the Yandex Music API"
license.workspace = true
repository.workspace = true
keywords = ["yandex", "music", "api", "async"]
categories = ["api-bindings", "multimedia"]

[features]
default = ["oauth"]
oauth = ["dep:uuid"]
credentials = ["oauth", "dep:directories", "dep:zeroize", "tokio/rt"]
downloads = ["dep:base64", "dep:hmac", "dep:sha2", "reqwest/stream"]
lyrics = ["dep:base64", "dep:hmac", "dep:sha2"]

[dependencies]
base64 = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
url.workspace = true
uuid = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
wiremock.workspace = true
